# METAHEURISTICA

Practica1/software/FUENTES/: mochilaCuadratica1.cpp
Practica2/software/FUENTES/: CMakeLists.txt
Practica2/software/FUENTES/include/: AGE.h  AGG.h  AM.h  BL.h  LecturaFicheros.h
Practica2/software/FUENTES/src/: AGE.cpp  AGG.cpp  AM.cpp  BL.cpp  LecturaFicheros.cpp  main.cpp
Practica3/software/FUENTES/: CMakeLists.txt
Practica3/software/FUENTES/include/: BL.h  BMB.h  ES.h  FuncionesComunes.h  ILS.h
Practica3/software/FUENTES/src/: BL.cpp  BMB.cpp  ES.cpp  FuncionesComunes.cpp  ILS.cpp  main.cpp
